# btx-cro-monitor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  AUDIT_REPORT.md  CLAUDE.md  Dockerfile  README.md  alembic.ini  design.md  docker-compose.yml  fly.toml  pyproject.toml
.codex/: config.toml
.github/workflows/: ci.yml  deploy-frontend.yml  deploy-staging.yml  discovery-validate.yml  (+6 more)
alembic/: env.py
btx_platform/: __init__.py  api.py  asgi.py  auth.py  config.py  crypto.py  db.py  engine_config.py  health.py  hubspot.py  ingest.py  llm.py  models.py  observability.py  pipeline.py  queue.py  ratelimit.py  retention.py  schemas.py  security.py
design/: DESIGN_AUDIT.md
docs/: AI_DECISIONS.md  AUDIT_REPORT_2026-07-07.md  DECLUTTER_REPORT.md  DEMO_DATA.md  DEMO_HUBSPOT_TASK.md  DEMO_SCRIPT.md  DEPLOY_BACKEND.md  IA_FOUR_SURFACES.md  IA_RESTRUCTURE_PLAN.html  INTEGRATIONS_PLAN.md  INTEGRATION_CODEX_PROMPTS.md  MANUAL_QA.md  PAGES.md  PLATFORM_BLUEPRINT.md  WIZARD_STACK_RECONCILE.md  WORK_ITEMS_API.md
frontend/: .env.example  .env.production.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  wrangler.toml
monitor_engine/: __main__.py  models.py  pipeline.py
scripts/: ai-dev.sh
tests/: auth_helpers.py  test_collectors.py  test_crypto.py  test_deliverables.py  test_health_observability.py  test_hubspot.py  test_migrations.py  test_pipeline.py  test_platform_auth.py  test_platform_tier1.py  test_platform_webhook.py  test_retention.py  test_targets.py  test_worker_forward.py
tooling/: discovery_agent.py
(+250 files in other folders)
