[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "monitor_engine"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "requests>=2.31",
    "feedparser>=6.0",        # RSS/Atom parsing — approved
    "beautifulsoup4>=4.12",   # CSS-selector HTML parsing — approved
    "python-dateutil>=2.9",   # date string fallback parser — approved
    "anthropic>=0.50",        # LLM classification and synthesis — approved
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
# Integration platform backend (Engine #1). Kept optional so the static
# monitor_engine install stays lean; install with `pip install -e ".[platform]"`.
platform = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.2",
    "alembic>=1.13",
    "pydantic-settings>=2.0",
    "celery>=5.3",            # background workers (Phase 2)
    "redis>=5.0",             # broker/result backend (Phase 2)
    "httpx>=0.27",            # outbound forwarder + TestClient
    "pyjwt[crypto]>=2.8",     # Clerk session JWT verification (WP10-A)
    "cryptography>=42.0",     # application-level credential encryption (WP10-B)
]

[tool.setuptools.packages.find]
where = ["."]
include = ["monitor_engine*", "btx_platform*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
